--- a/sass/style.sass
+++ b/sass/style.sass
@@ -8,7 +8,7 @@
 // Прикол 
 
 .rock
-    height: 1000px
+    height: 900px
     width: 100%
     overflow: hidden
     background-image: url(../img/rock/bg.png)
@@ -19,6 +19,9 @@
         background-image: url(../img/rock/bg1500.png)
     @media(max-width: 800px)
         background-image: url(../img/rock/bg800.png)
+        height: 700px
+    @media(max-width: 600px)
+        height: 500px
 
     @import rock/header
 
@@ -33,16 +36,34 @@
             left: 7%
         @media(max-width: 1000px)
             left: 0%
+        @media(max-width: 900px)
+            top: 100px
+            left: -80px
+        @media(max-width: 700px)
+            top: 60px
+        @media(max-width: 500px)
+            left: -160px
         .logo
             top: -100px
             left: 100px
+            @media(max-width: 700px)
+                top: -49px
+                left: 88px
+            @media(max-width: 500px)
+                left: 170px
+
             img
                 width: 500px
+                @media(max-width: 700px)
+                    width: 200px
         .text
             position: absolute
             top: 98px
             left: 186px
             transform: rotate(-10deg)
+            @media(max-width: 700px)
+                top: 37px
+                left: 193px
             .h1_first_part, .h1_second_part
                 font-family: 'Permanent Marker'
                 font-style: normal
@@ -52,16 +73,25 @@
                 color: black
                 width: 300px
                 z-index: 4
+                @media(max-width: 700px)
+                    font-size: 19px
             .h1_second_part
                 position: relative
                 left: 95px
                 top: -15px
+                @media(max-width: 700px)
+                    left: 52px
+                    top: -38px
             .h1_wrapper
                 position: relative
                 z-index: -1
                 top: -100px
                 left: 67px
                 transform: rotate(10deg)
+                @media(max-width: 700px)
+                    top: -96px
+                    left: 36px
+                    width: 180px
         .small_text
             width: 411px
             font-family: 'Bebas Neue'
@@ -74,8 +104,27 @@
             position: relative
             top: -306px
             left: 156px
+            @media(max-width: 700px)
+                font-size: 12.5px
+                line-height: 15px
+                top: -243px
+                left: 185px
+                width: 210px
+        .cloud_img
+            @media(max-width: 700px)
+                width: 500px
 
     .hand
-        position: absolute
-        right: 0px
+        position: relative
+        left: 60%
         top: -20px
+        @media(max-width: 1200px)
+            top: 50px
+            width: 500px
+        @media(max-width: 700px)
+            width: 400px
+            left: 60%
+        @media(max-width: 500px)
+            width: 260px
+            left: 60%
+            top: 80px
