--- a/css/header.css
+++ b/css/header.css
@@ -1,73 +1,37 @@
-header {
-  display: flex;
-}
-@media (max-width: 1100px) {
-  header {
-    display: none;
-  }
-}
-header .logo {
-  width: 25%;
-  display: flex;
-  justify-content: right;
-}
-header .logo .wrap {
-  z-index: 1;
-  left: -360px;
-}
-header .logo .img {
-  z-index: 2;
-  top: 25px;
-  left: -232px;
-  transform: rotate(5deg);
-}
-header .logo .img img {
-  height: auto;
-  width: 171px;
-}
-header .logo .txt {
-  z-index: 2;
-  top: 85px;
-  left: -210px;
-}
-header .links {
-  width: 50%;
-  display: flex;
-  -moz-column-gap: 60px;
-       column-gap: 60px;
-  justify-content: center;
-  padding-top: 30px;
-  z-index: 2;
-}
-header .links a {
+.header {
   font-family: "Bebas Neue";
   font-style: normal;
   font-weight: 700;
-  font-size: 28px;
-  line-height: 28px;
-  text-decoration: none;
-  letter-spacing: 0.1em;
+  font-size: 45px;
+  line-height: 100%;
 }
-header .nw {
-  width: 25%;
-  padding-top: 22px;
-}
-header .nw .as {
-  width: 170px;
-}
-header .nw .wrap {
-  top: -50px;
-  left: -80px;
-}
-
-.mob_header {
-  display: none;
-}
-@media (max-width: 1100px) {
-  .mob_header {
-    display: block;
-    position: absolute;
-    top: 0px;
-    right: 0px;
+@media (max-width: 700px) {
+  .header {
+    transform: scale(0.5);
   }
+}
+.header .wrapper {
+  left: -55px;
+  z-index: 2;
+  top: -34px;
+}
+.header .bg {
+  z-index: 1;
+  left: -48px;
+  top: -13px;
+}
+.header .decor {
+  top: -78px;
+  left: -135px;
+  z-index: 0;
+}
+.header .bomb {
+  top: -129px;
+  left: 154px;
+  z-index: 4;
+}
+.header p {
+  position: relative;
+  transform: rotate(-6deg);
+  z-index: 3;
 }
