--- a/css/tmp.css
+++ b/css/tmp.css
@@ -3,637 +3,10 @@
   margin: 0 auto;
 }
 
-.we_provide {
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-  margin-top: 200px;
-}
-.we_provide .header:hover .header_element_wrapper svg {
-  stroke-dasharray: 20;
-  animation: 1s linear 0s infinite alternate header_element_wrapper;
-}
-@keyframes header_element_wrapper {
-  100% {
-    stroke-dashoffset: 40;
-  }
-}
-.we_provide .header {
-  font-family: "Bebas Neue";
-  font-style: normal;
-  font-weight: 700;
-  font-size: 45px;
-  line-height: 100%;
-}
-.we_provide .header .header_element_wrapper {
-  width: 0px;
-  height: 0px;
-  position: relative;
-  left: -55px;
-  z-index: 2;
-  top: -34px;
-}
-.we_provide .header .header_element_wrapper_fill {
-  width: 0px;
-  height: 0px;
-  position: relative;
-  z-index: 1;
-  left: -48px;
-  top: -13px;
-}
-.we_provide .header .header_element_wrapper_decor {
-  width: 0px;
-  height: 0px;
-  position: relative;
-  top: -50px;
-  left: -100px;
-  top: -78px;
-  left: -135px;
-  z-index: 0;
-}
-.we_provide .header .header_element_wrapper_decor_2 {
-  width: 0px;
-  height: 0px;
-  position: relative;
-  top: -50px;
-  left: -100px;
-  top: -129px;
-  left: 154px;
-  z-index: 4;
-}
-.we_provide .header p {
-  position: relative;
-  transform: rotate(-6deg);
-  z-index: 3;
-}
-.we_provide .navigation_wrapper {
-  width: 100%;
-}
-.we_provide .navigation {
-  width: 1000px;
-  margin: 0 auto;
-  margin-top: 75px;
-  display: flex;
-  justify-content: space-around;
-}
-.we_provide .navigation_element {
-  width: auto;
-  font-family: "Bebas Neue";
-  font-weight: 700;
-  font-size: 45px;
-  line-height: 75%;
-  text-transform: uppercase;
-  color: #FFFFFF;
-  transform: rotate(-10deg);
-  transition: 0.5s ease-in-out;
-}
-.we_provide .navigation_element span {
-  display: block;
-  font-family: "Bebas Neue";
-  font-style: normal;
-  font-weight: 700;
-  font-size: 37px;
-  text-transform: uppercase;
-  color: #FF8200;
-}
-.we_provide .navigation_element .navigation_element_decor {
-  display: flex;
-  transform: rotate(9deg);
-  padding-top: 20px;
-}
-.we_provide .navigation_element .navigation_element_decor svg {
-  margin: auto;
-}
-.we_provide .navigation_element .navigation_element_decor svg .topline {
-  transition: 0.5s ease-out;
-}
-.we_provide .navigation_element .navigation_element_decor svg .botline {
-  transition: 0.5s ease-out;
-}
-.we_provide .navigation_element:hover {
-  transform: scale(1.1) rotate(0.3deg);
-  cursor: pointer;
-}
-.we_provide .navigation_element:hover svg {
-  margin: auto;
-}
-.we_provide .navigation_element:hover svg .topline {
-  transform: translate(-71px, 7px) rotate(-3.9deg);
-}
-.we_provide .navigation_element:hover svg .botline {
-  transform: translate(61px, -1px) rotate(-1deg);
-}
-.we_provide .gold {
-  width: 0px;
-  height: 0px;
-  opacity: 0;
-  position: absolute;
-  top: -100px;
-  left: 300px;
-  overflow: hidden;
-}
-.we_provide .gold img {
-  position: absolute;
-  left: -400px;
-  top: -46px;
-}
-.we_provide .active {
-  color: white;
-  transform: scale(1.1) rotate(0.3deg);
-  animation: 0.5s ease-in-out we_porive_nav_active_text;
-  animation-fill-mode: forwards;
-}
-@keyframes we_porive_nav_active_text {
-  100% {
-    color: black;
-  }
-}
-.we_provide .active span {
-  color: #FF8200;
-  animation: 0.5s ease-in-out we_porive_nav_active_span;
-  animation-fill-mode: forwards;
-}
-@keyframes we_porive_nav_active_span {
-  100% {
-    color: black;
-  }
-}
-.we_provide .active svg {
-  opacity: 1;
-  animation: 0.2s ease-in-out we_porive_nav_active_svg;
-  animation-fill-mode: forwards;
-}
-@keyframes we_porive_nav_active_svg {
-  100% {
-    opacity: 0;
-  }
-}
-.we_provide .active .gold {
-  height: 300px;
-  width: 400px;
-  opacity: 1;
-  left: -100px;
-  z-index: -1;
-}
-.we_provide .active img {
-  left: 0px;
-}
-.we_provide .text {
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  height: 600px;
-  transition: 0.5s;
-}
-.we_provide .text .p {
-  width: 540px;
-  height: 0px;
-  position: absolute;
-  z-index: 2;
-  margin-top: 127px;
-}
-.we_provide .text .p p {
-  font-family: "Bebas Neue";
-  font-style: normal;
-  font-weight: 400;
-  font-size: 24px;
-  line-height: 34px;
-  width: 576px;
-}
-.we_provide .text .text_wrapper {
-  width: 0px;
-  height: 0px;
-  position: relative;
-  left: -350px;
-  top: 40px;
-  z-index: 1;
-}
-.we_provide .text .text_wrapper svg .border {
-  animation: 1s ease-out text_wrapper_show_anim;
-  animation-fill-mode: forwards;
-  stroke-dasharray: 1920;
-  stroke-dashoffset: 1920;
-}
-@keyframes text_wrapper_show_anim {
-  100% {
-    stroke-dashoffset: 0;
-  }
-}
-.we_provide .text .text_wrapper_wrapper {
-  width: 0px;
-  height: 0px;
-  position: relative;
-  left: -30px;
-  top: -301px;
-}
-.we_provide .text .text_wrapper_wrapper svg .border {
-  animation: 1s ease-out 1s text_wrapper_show_anim;
-  animation-fill-mode: forwards;
-  stroke-dasharray: 1950;
-  stroke-dashoffset: 1950;
-}
-@keyframes text_wrapper_show_anim {
-  100% {
-    stroke-dashoffset: 0;
-  }
-}
-.we_provide .text .mouth {
-  height: 0px;
-  width: 0px;
-  position: relative;
-  top: -250px;
-  left: 400px;
-  z-index: -1;
-  animation: 1s ease-out mouth_show_anim;
-  animation-fill-mode: forwards;
-}
-@keyframes mouth_show_anim {
-  70% {
-    top: -50px;
-    left: 700px;
-    z-index: -1;
-  }
-  100% {
-    top: -120px;
-    left: 605px;
-    z-index: 1;
-  }
-}
-.we_provide .text .exc_point {
-  height: 0px;
-  width: 0px;
-  position: relative;
-  top: -291px;
-  left: 500px;
-  z-index: -1;
-  animation: 1s cubic-bezier(0, 0.72, 0.19, 0.96) 1s exc_point_show_anim;
-  animation-fill-mode: forwards;
-}
-@keyframes exc_point_show_anim {
-  99% {
-    top: -291px;
-    left: 735px;
-    z-index: -1;
-  }
-  100% {
-    top: -291px;
-    left: 735px;
-    z-index: 1;
-  }
-}
-.we_provide .text .star_right {
-  height: 0px;
-  width: 0px;
-  position: relative;
-  top: -125px;
-  z-index: -1;
-  left: 500px;
-  animation: 1s cubic-bezier(0, 0.72, 0.19, 0.96) 1.5s star_right_show_anim;
-  animation-fill-mode: forwards;
-}
-@keyframes star_right_show_anim {
-  99% {
-    top: -125px;
-    left: 796px;
-    z-index: -1;
-  }
-  100% {
-    top: -125px;
-    left: 796px;
-    z-index: 1;
-  }
-}
-.we_provide .text .star_left {
-  height: 0px;
-  width: 0px;
-  position: relative;
-  top: -100px;
-  z-index: -1;
-  left: 200px;
-  animation: 1s cubic-bezier(0, 0.72, 0.19, 0.96) 2s star_left_show_anim;
-  animation-fill-mode: forwards;
-}
-@keyframes star_left_show_anim {
-  99% {
-    top: -24px;
-    left: -104px;
-    z-index: -1;
-  }
-  100% {
-    top: -24px;
-    left: -104px;
-    z-index: 1;
-  }
-}
-.we_provide .text .lightning {
-  height: 0px;
-  width: 0px;
-  position: relative;
-  top: -207px;
-  left: 200px;
-  z-index: -1;
-  animation: 1s cubic-bezier(0, 0.72, 0.19, 0.96) 2.5s lightning_show_anim;
-  animation-fill-mode: forwards;
-}
-@keyframes lightning_show_anim {
-  99% {
-    top: -207px;
-    left: -181px;
-    z-index: -1;
-  }
-  100% {
-    top: -207px;
-    left: -181px;
-    z-index: 1;
-  }
-}
-.we_provide .text .corner {
-  height: 0px;
-  width: 0px;
-  position: relative;
-  z-index: -1;
-  top: -100px;
-  left: 100px;
-  animation: 1s cubic-bezier(0, 0.72, 0.19, 0.96) 3s corner_show_anim;
-  animation-fill-mode: forwards;
-}
-@keyframes corner_show_anim {
-  99% {
-    top: -291px;
-    left: -48px;
-    z-index: -1;
-  }
-  100% {
-    top: -291px;
-    left: -48px;
-    z-index: 1;
-  }
-}
-.we_provide .hide {
-  opacity: 0;
-}
-
 .element {
   width: 0px;
   height: 0px;
   position: relative;
-}
-
-.sources_header {
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-  height: 195px;
-}
-.sources_header .header .count {
-  font-family: "Bebas Neue";
-  font-style: normal;
-  font-weight: 700;
-  font-size: 230px;
-  line-height: 100%;
-  transform: rotate(-6deg);
-  position: relative;
-  z-index: 0;
-  top: 0px;
-  left: -268px;
-}
-.sources_header .header .text {
-  font-family: "Bebas Neue";
-  font-style: normal;
-  font-weight: 700;
-  font-size: 45px;
-  line-height: 100%;
-  text-align: center;
-  transform: rotate(-6deg);
-  z-index: 3;
-  top: 160px;
-  left: -50px;
-}
-.sources_header .header .text_wrapper {
-  width: 0px;
-  height: 0px;
-  position: relative;
-  top: 131px;
-  left: -91px;
-  z-index: 2;
-}
-.sources_header .header .text_wrapper_background {
-  width: 0px;
-  height: 0px;
-  position: relative;
-  top: 134px;
-  left: -97px;
-  z-index: 1;
-}
-.sources_header .header .like {
-  width: 0px;
-  height: 0px;
-  position: relative;
-  top: -27px;
-  left: -388px;
-  z-index: 1;
-}
-
-.sources_content {
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-  width: 100%;
-  overflow: hidden;
-  height: 840px;
-  position: relative;
-  top: -170px;
-}
-.sources_content .content_background {
-  width: 1140px;
-  z-index: -6;
-  top: 115px;
-}
-.sources_content .rocket {
-  z-index: -1;
-  left: 610px;
-  top: 0px;
-}
-.sources_content .speaker {
-  z-index: -1;
-  left: 17px;
-  top: 492px;
-}
-.sources_content .speaker_background {
-  z-index: -2;
-  left: 102px;
-  top: 534px;
-}
-.sources_content .soc_media {
-  z-index: -5;
-  top: 262px;
-  left: 140px;
-}
-.sources_content .soc_media .soc_media_background_wrapper {
-  top: 14px;
-  left: -3px;
-}
-.sources_content .soc_media .tt {
-  top: 53px;
-  left: -48px;
-}
-.sources_content .soc_media .fb {
-  top: -13px;
-  left: 117px;
-}
-.sources_content .soc_media .tw {
-  top: 24px;
-  left: 184px;
-}
-.sources_content .soc_media .fc {
-  left: -16px;
-  top: 4px;
-}
-.sources_content .soc_media .sc {
-  top: 295px;
-  left: 224px;
-}
-.sources_content .soc_media .lines {
-  top: 248px;
-  left: 96px;
-}
-.sources_content .soc_media .text {
-  transform: rotate(-7deg);
-  top: 147px;
-  left: 49px;
-}
-.sources_content .soc_media .text .small {
-  font-family: "Bebas Neue";
-  font-weight: 700;
-  font-size: 45px;
-  text-transform: uppercase;
-  line-height: 100%;
-}
-.sources_content .soc_media .text .big {
-  font-family: "Bebas Neue";
-  font-weight: 700;
-  font-size: 75px;
-  line-height: 65%;
-  text-transform: uppercase;
-}
-.sources_content .mob_user {
-  top: 232px;
-  left: 436px;
-}
-.sources_content .mob_user .background_wrapper {
-  left: 9px;
-}
-.sources_content .mob_user .lines {
-  top: 158px;
-  left: 95px;
-}
-.sources_content .mob_user .text {
-  font-family: "Bebas Neue";
-  font-weight: 700;
-  font-size: 42px;
-  line-height: 100%;
-  text-transform: uppercase;
-  width: 200px;
-  transform: rotate(-7deg);
-  top: 46px;
-  left: 47px;
-}
-.sources_content .retargeting {
-  top: 455px;
-  left: 428px;
-}
-.sources_content .retargeting .background_wrapper {
-  left: 14px;
-  top: -5px;
-}
-.sources_content .retargeting .human {
-  left: -15px;
-  top: -1px;
-}
-.sources_content .retargeting .lines {
-  top: 140px;
-  left: 110px;
-}
-.sources_content .retargeting .text {
-  font-family: "Bebas Neue";
-  font-style: normal;
-  font-weight: 700;
-  font-size: 42px;
-  line-height: 100%;
-  text-transform: uppercase;
-  transform: rotate(-7deg);
-  width: 167px;
-  text-align: center;
-  top: 40px;
-  left: 60px;
-}
-.sources_content .dsp {
-  top: 273px;
-  left: 727px;
-}
-.sources_content .dsp .background_wrapper {
-  top: 16px;
-  left: -1px;
-}
-.sources_content .dsp .android {
-  left: 110px;
-  top: -40px;
-}
-.sources_content .dsp .point {
-  top: 290px;
-  left: 54px;
-}
-.sources_content .dsp .p18 {
-  top: 240px;
-  left: -12px;
-}
-.sources_content .dsp .left_corner {
-  left: -12px;
-  top: 2px;
-}
-.sources_content .dsp .right_corner {
-  top: 295px;
-  left: 222px;
-}
-.sources_content .dsp .lines {
-  top: 211px;
-  left: 101px;
-}
-.sources_content .dsp .text {
-  font-family: "Bebas Neue";
-  font-weight: 700;
-  font-size: 75px;
-  line-height: 100%;
-  text-transform: uppercase;
-  color: #FFFFFF;
-  transform: rotate(-7deg);
-  top: 140px;
-  left: 87px;
-}
-.sources_content .button {
-  top: 720px;
-  left: 480px;
-}
-.sources_content .button .wrapper_yellow {
-  top: 5px;
-  left: -14px;
-}
-.sources_content .button .text {
-  font-family: "Marker Felt";
-  font-style: normal;
-  font-weight: 400;
-  font-size: 27px;
-  line-height: 29px;
-  width: 120px;
-  background: linear-gradient(180deg, #FF9323 0%, #FFF02E 100%), #FFFFFF;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  background-clip: text;
-  text-fill-color: transparent;
-  transform: rotate(-6.44deg);
-  height: 26px;
-  top: 34px;
-  left: 40px;
 }
 
 .vert_header {
@@ -642,8 +15,11 @@
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
-  height: 195px;
+  height: 265px;
   margin-top: -78px;
+  width: 100%;
+  overflow: hidden;
+  margin-bottom: -60px;
 }
 .vert_header .header .count {
   font-family: "Bebas Neue";
@@ -795,7 +171,11 @@
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
-  height: 195px;
+  height: 395px;
+  width: 100%;
+  overflow: hidden;
+  padding-top: 160px;
+  margin-top: -120px;
 }
 .partners_header .header .count {
   font-family: "Bebas Neue";
@@ -973,6 +353,9 @@
 .latest_article_content .latest_article_row {
   width: 100%;
   height: 160px;
+  width: 100%;
+  height: 230px;
+  overflow: hidden;
 }
 .latest_article_content .latest_article_row .latest_article_row_inner {
   width: 900px;
