--- a/sass/tmp.sass
+++ b/sass/tmp.sass
@@ -3,555 +3,23 @@
     width: 1300px
     margin: 0 auto
 
-.we_provide
-    display: flex
-    justify-content: center
-    flex-wrap: wrap
-    margin-top: 200px
-    .header:hover
-        .header_element_wrapper
-            svg
-                stroke-dasharray: 20
-                animation: 1s linear 0s infinite alternate header_element_wrapper
-                @keyframes header_element_wrapper
-                    100%
-                        stroke-dashoffset: 40
-
-    .header
-        font-family: 'Bebas Neue'
-        font-style: normal
-        font-weight: 700
-        font-size: 45px
-        line-height: 100%
-        .header_element_wrapper
-            width: 0px
-            height: 0px
-            position: relative
-            left: -55px
-            z-index: 2
-            top: -34px
-
-        .header_element_wrapper_fill
-            width: 0px
-            height: 0px
-            position: relative
-            z-index: 1
-            left: -48px
-            top: -13px
-        .header_element_wrapper_decor
-            width: 0px
-            height: 0px
-            position: relative
-            top: -50px
-            left: -100px
-            top: -78px
-            left: -135px
-            z-index: 0
-
-        .header_element_wrapper_decor_2
-            width: 0px
-            height: 0px
-            position: relative
-            top: -50px
-            left: -100px
-            top: -129px
-            left: 154px
-            z-index: 4
-        p
-            position: relative
-            transform: rotate(-6deg)
-            z-index: 3
-    .navigation_wrapper
-        width: 100%
-    .navigation
-        width: 1000px
-        margin: 0 auto
-        margin-top: 75px
-        display: flex
-        justify-content: space-around
-    .navigation_element
-        width: auto
-        font-family: 'Bebas Neue'
-        font-weight: 700
-        font-size: 45px
-        line-height: 75%
-        text-transform: uppercase
-        color: #FFFFFF
-        transform: rotate(-10deg)
-        transition: 0.5s ease-in-out
-        span
-            display: block
-            font-family: 'Bebas Neue'
-            font-style: normal
-            font-weight: 700
-            font-size: 37px
-            text-transform: uppercase
-            color: #FF8200
-            // animation: 5s linear 0s infinite alternate span_anim
-            // @keyframes span_anim
-            //     100%
-            //         color: #FFF02E
-            // background: linear-gradient(271.98deg, #FF8200 -7.27%, #FFF02E 109.2%), #FFFFFF
-            // -webkit-background-clip: text
-            // -webkit-text-fill-color: transparent
-            // background-clip: text
-            // text-fill-color: transparent
-        .navigation_element_decor
-            display: flex
-            transform: rotate(9deg)
-            padding-top: 20px
-            svg
-                margin: auto
-                .topline
-                    transition: 0.5s ease-out
-                .botline
-                    transition: 0.5s ease-out
-
-    .navigation_element:hover
-        transform: scale(1.1) rotate(0.3deg)
-        cursor: pointer
-        svg
-            margin: auto
-            .topline
-                transform: translate(-71px, 7px) rotate(-3.9deg)
-            .botline
-                transform: translate(61px,-1px) rotate(-1deg)
-
-    .gold
-        width: 0px
-        height: 0px
-        opacity: 0
-        position: absolute
-        top: -100px
-        left: 300px
-        overflow: hidden
-        img
-            position: absolute
-            left: -400px
-            top: -46px
-    .active
-        color: white
-        transform: scale(1.1) rotate(0.3deg)
-        animation: 0.5s ease-in-out we_porive_nav_active_text
-        animation-fill-mode: forwards
-        @keyframes we_porive_nav_active_text
-            100%
-                color: black
-        span
-            color: #FF8200
-            animation: 0.5s ease-in-out we_porive_nav_active_span
-            animation-fill-mode: forwards
-            @keyframes we_porive_nav_active_span
-                100%
-                    color: black
-        svg
-            opacity: 1
-            animation: 0.2s ease-in-out we_porive_nav_active_svg
-            animation-fill-mode: forwards
-            @keyframes we_porive_nav_active_svg
-                100%
-                    opacity: 0
-        .gold
-            height: 300px
-            width: 400px
-            opacity: 1
-            left: -100px
-            z-index: -1
-        img
-            left: 0px
-
-    .text
-        width: 100%
-        display: flex
-        justify-content: center
-        height: 600px
-        transition: 0.5s
-        .p
-            width: 540px
-            height: 0px
-            position: absolute
-            z-index: 2
-            margin-top: 127px
-            p
-                font-family: 'Bebas Neue'
-                font-style: normal
-                font-weight: 400
-                font-size: 24px
-                line-height: 34px
-                width: 576px
-        .text_wrapper
-            width: 0px
-            height: 0px
-            position: relative
-            left: -350px
-            top: 40px
-            z-index: 1
-            svg
-                .border
-                    animation: 1s ease-out text_wrapper_show_anim
-                    animation-fill-mode: forwards
-                    stroke-dasharray: 1920
-                    stroke-dashoffset: 1920
-                    @keyframes text_wrapper_show_anim
-                        100%
-                            stroke-dashoffset: 0
-        .text_wrapper_wrapper
-            width: 0px
-            height: 0px
-            position: relative
-            left: -30px
-            top: -301px
-            svg
-                .border
-                    animation: 1s ease-out 1s text_wrapper_show_anim
-                    animation-fill-mode: forwards
-                    stroke-dasharray: 1950
-                    stroke-dashoffset: 1950
-                    @keyframes text_wrapper_show_anim
-                        100%
-                            stroke-dashoffset: 0
-        .mouth
-            height: 0px
-            width: 0px
-            position: relative
-            top: -250px
-            left: 400px
-            z-index: -1
-            animation: 1s ease-out mouth_show_anim
-            animation-fill-mode: forwards
-            @keyframes mouth_show_anim
-                70%
-                    top: -50px
-                    left: 700px
-                    z-index: -1
-                100%
-                    top: -120px
-                    left: 605px
-                    z-index: 1
-        .exc_point
-            height: 0px
-            width: 0px
-            position: relative
-            top: -291px
-            left: 500px
-            z-index: -1
-            animation: 1s cubic-bezier(0, 0.72, 0.19, 0.96) 1s exc_point_show_anim
-            animation-fill-mode: forwards
-            @keyframes exc_point_show_anim
-                99%
-                    top: -291px
-                    left: 735px
-                    z-index: -1
-                100%
-                    top: -291px
-                    left: 735px
-                    z-index: 1
-        .star_right
-            height: 0px
-            width: 0px
-            position: relative
-            top: -125px
-            z-index: -1
-            left: 500px
-            animation: 1s cubic-bezier(0, 0.72, 0.19, 0.96) 1.5s star_right_show_anim
-            animation-fill-mode: forwards
-            @keyframes star_right_show_anim
-                99%
-                    top: -125px
-                    left: 796px
-                    z-index: -1
-                100%
-                    top: -125px
-                    left: 796px
-                    z-index: 1
-        .star_left
-            height: 0px
-            width: 0px
-            position: relative
-            top: -100px
-            z-index: -1
-            left: 200px
-            animation: 1s cubic-bezier(0, 0.72, 0.19, 0.96) 2s star_left_show_anim
-            animation-fill-mode: forwards
-            @keyframes star_left_show_anim
-                99%
-                    top: -24px
-                    left: -104px
-                    z-index: -1
-                100%
-                    top: -24px
-                    left: -104px
-                    z-index: 1
-        .lightning
-            height: 0px
-            width: 0px
-            position: relative
-            top: -207px
-            left: 200px
-            z-index: -1
-            animation: 1s cubic-bezier(0, 0.72, 0.19, 0.96) 2.5s lightning_show_anim
-            animation-fill-mode: forwards
-            @keyframes lightning_show_anim
-                99%
-                    top: -207px
-                    left: -181px
-                    z-index: -1
-                100%
-                    top: -207px
-                    left: -181px
-                    z-index: 1
-        .corner
-            height: 0px
-            width: 0px
-            position: relative
-            z-index: -1
-            top: -100px
-            left: 100px
-            animation: 1s cubic-bezier(0, 0.72, 0.19, 0.96) 3s corner_show_anim
-            animation-fill-mode: forwards
-            @keyframes corner_show_anim
-                99%
-                    top: -291px
-                    left: -48px
-                    z-index: -1
-                100%
-                    top: -291px
-                    left: -48px
-                    z-index: 1
-    .hide
-        opacity: 0
-
 .element
     width: 0px
     height: 0px
     position: relative
-.sources_header
-    display: flex
-    justify-content: center
-    flex-wrap: wrap
-    height: 195px
-    .header
-        .count
-            font-family: 'Bebas Neue'
-            font-style: normal
-            font-weight: 700
-            font-size: 230px
-            line-height: 100%
-            transform: rotate(-6deg)
-            position: relative
-            z-index: 0
-            top: 0px
-            left: -268px
-        .text
-            font-family: 'Bebas Neue'
-            font-style: normal
-            font-weight: 700
-            font-size: 45px
-            line-height: 100%
-            text-align: center
-            transform: rotate(-6deg)
-            z-index: 3
-            top: 160px
-            left: -50px
-        .text_wrapper
-            width: 0px
-            height: 0px
-            position: relative
-            top: 131px
-            left: -91px
-            z-index: 2
-        .text_wrapper_background
-            width: 0px
-            height: 0px
-            position: relative
-            top: 134px
-            left: -97px
-            z-index: 1
-        .like
-            width: 0px
-            height: 0px
-            position: relative
-            top: -27px
-            left: -388px
-            z-index: 1
-
-.sources_content
-    display: flex
-    justify-content: center
-    flex-wrap: wrap
-    width: 100%
-    overflow: hidden
-    height: 840px
-    position: relative
-    top: -170px
-
-    .content_background
-        width: 1140px
-        z-index: -6
-        top: 115px
-    .rocket
-        z-index: -1
-        left: 610px
-        top: 0px
-    .speaker
-        z-index: -1
-        left: 17px
-        top: 492px
-    .speaker_background
-        z-index: -2
-        left: 102px
-        top: 534px
-    .soc_media
-        z-index: -5
-        top: 262px
-        left: 140px
-        .soc_media_background_wrapper
-            top: 14px
-            left: -3px
-        .tt
-            top: 53px
-            left: -48px
-        .fb
-            top: -13px
-            left: 117px
-        .tw
-            top: 24px
-            left: 184px
-        .fc
-            left: -16px
-            top: 4px
-        .sc
-            top: 295px
-            left: 224px
-        .lines
-            top: 248px
-            left: 96px
-        .text
-            transform: rotate(-7deg)
-            top: 147px
-            left: 49px
-            .small
-                font-family: 'Bebas Neue'
-                font-weight: 700
-                font-size: 45px
-                text-transform: uppercase
-                line-height: 100%
-            .big
-                font-family: 'Bebas Neue'
-                font-weight: 700
-                font-size: 75px
-                line-height: 65%
-                text-transform: uppercase
-
-    .mob_user
-        top: 232px
-        left: 436px
-        .background_wrapper
-            left: 9px
-        .lines
-            top: 158px
-            left: 95px
-        .text
-            font-family: 'Bebas Neue'
-            font-weight: 700
-            font-size: 42px
-            line-height: 100%
-            text-transform: uppercase
-            width: 200px
-            transform: rotate(-7deg)
-            top: 46px
-            left: 47px
-
-    .retargeting
-        top: 455px
-        left: 428px
-        .background_wrapper
-            left: 14px
-            top: -5px
-        .human
-            left: -15px
-            top: -1px
-        .lines
-            top: 140px
-            left: 110px
-        .text
-            font-family: 'Bebas Neue'
-            font-style: normal
-            font-weight: 700
-            font-size: 42px
-            line-height: 100%
-            text-transform: uppercase
-            transform: rotate(-7deg)
-            width: 167px
-            text-align: center
-            top: 40px
-            left: 60px
-
-    .dsp
-        top: 273px
-        left: 727px
-        .background_wrapper
-            top: 16px
-            left: -1px
-        .android
-            left: 110px
-            top: -40px
-        .point
-            top: 290px
-            left: 54px
-        .p18
-            top: 240px
-            left: -12px
-        .left_corner
-            left: -12px
-            top: 2px
-        .right_corner
-            top: 295px
-            left: 222px
-        .lines
-            top: 211px
-            left: 101px
-        .text
-            font-family: 'Bebas Neue'
-            font-weight: 700
-            font-size: 75px
-            line-height: 100%
-            text-transform: uppercase
-            color: #FFFFFF
-            transform: rotate(-7deg)
-            top: 140px
-            left: 87px
-    .button
-        top: 720px
-        left: 480px
-        .wrapper_yellow
-            top: 5px
-            left: -14px
-        .text
-            font-family: 'Marker Felt'
-            font-style: normal
-            font-weight: 400
-            font-size: 27px
-            line-height: 29px
-            width: 120px
-            background: linear-gradient(180deg, #FF9323 0%, #FFF02E 100%), #FFFFFF
-            -webkit-background-clip: text
-            -webkit-text-fill-color: transparent
-            background-clip: text
-            text-fill-color: transparent
-            transform: rotate(-6.44deg)
-            height: 26px
-            top: 34px
-            left: 40px
 
 .vert_header
+
     position: relative
     z-index: 2
     display: flex
     justify-content: center
     flex-wrap: wrap
-    height: 195px
+    height: 265px
     margin-top: -78px
+    width: 100%
+    overflow: hidden
+    margin-bottom: -60px
     .header
         .count
             font-family: 'Bebas Neue'
@@ -668,13 +136,18 @@
             top: -13px
 
 .partners_header
+
     position: relative
     z-index: 2
     display: flex
     justify-content: center
     flex-wrap: wrap
-    height: 195px
-    // margin-top: -78px
+    height: 395px
+    width: 100%
+    overflow: hidden
+    padding-top: 160px
+    margin-top: -120px
+
     .header
         .count
             font-family: 'Bebas Neue'
@@ -827,6 +300,9 @@
     .latest_article_row
         width: 100%
         height: 160px
+        width: 100%
+        height: 230px
+        overflow: hidden
         .latest_article_row_inner
             width: 900px
             margin: 0 auto
