--- a/css/header.css
+++ b/css/header.css
@@ -34,4 +34,40 @@
   position: relative;
   transform: rotate(-6deg);
   z-index: 3;
+}gap: 60px;
+  justify-content: center;
+  padding-top: 30px;
+  z-index: 2;
+}
+header .links a {
+  font-family: "Bebas Neue";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 28px;
+  line-height: 28px;
+  text-decoration: none;
+  letter-spacing: 0.1em;
+}
+header .nw {
+  width: 25%;
+  padding-top: 22px;
+}
+header .nw .as {
+  width: 170px;
+}
+header .nw .wrap {
+  top: -50px;
+  left: -80px;
+}
+
+.mob_header {
+  display: none;
+}
+@media (max-width: 1100px) {
+  .mob_header {
+    display: block;
+    position: absolute;
+    top: 0px;
+    right: 0px;
+  }
 }
